# rustnes

./: CLAUDE.md  Cargo.toml  Claude.md  DEVELOPMENT_HISTORY.md  MEMORY.md  NES-EMULATOR-DOCUMENTATION.md  NES-PPU-SPECIFICATION.md  NEST-EMULATOR-IMPLEMENTATION-DETAILS.md  NEST-EMULATOR-TESTING-GUIDE.md  NEST-EMULATOR-VERIFICATION.md  package-lock.json  rules.md
crates/nes-cli/: Cargo.toml
crates/nes-cli/src/: main.rs
crates/nes-core/: Cargo.toml
crates/nes-core/src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  lib.rs  ppu.rs  system.rs
crates/nes-core/tests/: compare_nestest.rs  cpu.rs  integration.rs  ppu.rs
crates/nes-desktop/: Cargo.toml
crates/nes-desktop/src/: main.rs  shader.wgsl
crates/nes-wasm/: Cargo.toml
crates/nes-wasm/src/: lib.rs
demo/: README.md  index.html  nes_wasm.d.ts  nes_wasm.js  nes_wasm_bg.js  nes_wasm_bg.wasm  nes_wasm_bg.wasm.d.ts  package.json  playwright_test.cjs  test.cjs  test.nes  test_demo.cjs  test_demo_cache.cjs  working_test.nes
src/: apu.rs  controller.rs  cpu.rs  lib.rs  main.rs  nes.rs  ppu.rs  rom.rs  test_debug.rs  testing.rs
tests/: compare_nestest
tests/roms/: nestest.nes
