[package]
name = "nes-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM wrapper for NES emulator"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
nes-core = { path = "../nes-core" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
# Disable externref usage for Chrome compatibility
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"